--- a/v2/package.json
+++ b/v2/package.json
@@ -8,14 +8,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@hedgedoc/html-to-react": "^2.1.1",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@vitejs/plugin-react": "^4.2.1",
+    "dompurify": "^3.1.7",
     "framer-motion": "^11.0.6",
+    "marked": "^14.1.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
