--- a/v2/package.json
+++ b/v2/package.json
@@ -14,12 +14,15 @@
     "@vitejs/plugin-react": "^4.2.1",
     "dompurify": "^3.1.7",
     "framer-motion": "^11.0.6",
+    "lodash": "^4.17.21",
     "marked": "^14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
