--- a/v2/public/projects.json
+++ b/v2/public/projects.json
@@ -14,10 +14,17 @@
   "description": "I find style transfer networks to be a fascinating field in machine learning. The goal of a style transfer network is to learn an artist's style from a single image and then &quot;paint&quot; over other images in that style. However, painting over video is more tricky because the small changes from one frame to the next can drastically change the output brush strokes. This produces a video with lots of flickering, and we&apos;d like a smooth video. We can use an optical flow library which takes a key frame and morphs it to match the nearby frames of a video. Combined with pre and postprocessing techniques to improve the quality of the output, this model produces beautiful painted videos which can be viewed on my [YouTube channel](https://www.youtube.com/channel/UCSrJD5Ic4ClxCpg68tVfvOg).\n\nThe style transfer network uses the Tensorflow library. Optical flow was done with EbSynth. OpenCV was used for pre and postprocessing."
 }, {
   "type": "entry",
+  "icon": "hexes",
+  "title": "Honeycomb Keyboard",
+  "titleLink": "",
+  "subtitles": [["November 2018 - December 2018"], ["Java", "MIDI"]],
+  "description": "One of my earlier personal projects in university was to take in a MIDI file of a song played on the piano and animate it on a keyboard made of hexagons layed out in a [harmonic note pattern](https://en.wikipedia.org/wiki/Harmonic_table_note_layout) which has keys laid out according to their harmonic relationship instead of frequency."
+}, {
+  "type": "entry",
   "icon": "edubots",
   "title": "Edubots",
   "titleLink": "",
-  "subtitles": [["August 2016 - March 2017"], ["GameMaker Studio 2"]],
+  "subtitles": [["August 2016 - May 2017"], ["GameMaker Studio 2"]],
   "description": "My senior project in high school was to create a video game that taught history as you played through it."
 }, {
   "type": "entry",
