--- a/v2/public/projects.json
+++ b/v2/public/projects.json
@@ -1,5 +1,12 @@
 [{
   "type": "entry",
+  "icon": "windfallen",
+  "title": "Windfallen",
+  "titleLink": "https://applesauce.riverway.li",
+  "subtitles": [["August 2024 - December 2024"], ["Python", "JAX", "Mava", "Jumanji"]],
+  "description": "My capstone project for my masters degree is a multi-agent reinforcement learning environment for picking up windfallen apples. The environment is a 2D aerial view of an apple orchard with many trees and apples. The agents are robots driving on the ground and can pick up apples. The agents are trained using a multi-agent reinforcement learning algorithm called Mava. The environment is built using Jumanji, a library for creating multi-agent reinforcement learning environments. The agents are trained using JAX, a library for high-performance numerical computing. The project is hosted on a website where you can watch the agents learn to pick up apples in real-time."
+}, {
+  "type": "entry",
   "icon": "stocks",
   "title": "Integra",
   "titleLink": "",
