--- a/wedding/package.json
+++ b/wedding/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "prod": "vite build && cp dist/assets/$(ls dist/assets | grep -E '\\.js' | head -n 1) compiled/main.js && cp dist/assets/$(ls dist/assets | grep -E '\\.css' | head -n 1) compiled/main.css"
+    "prod": "vite build && mv dist/assets/main-*.js public/main.js && mv dist/assets/main-*.css public/main.css"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
